[DATALAD] exclude paths from annex'ing

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.yaml annex.largefiles=nothing
 *.md annex.largefiles=nothing
 *.csv annex.largefiles=nothing
+.codecarbon.config annex.largefiles=nothing
