--- a/.codecarbon.config
+++ b/.codecarbon.config
@@ -1,1 +1,1 @@
-.git/annex/objects/Mm/3q/MD5E-s140--ecd4b884f6334688c46fc315a1ba11c9/MD5E-s140--ecd4b884f6334688c46fc315a1ba11c9
+/annex/objects/MD5E-s140--2a0310629883ad8bdf5c701a698d43e5
