Prepare for second run with upload to CodeCarbon API
Experiment ID was created beforehand and obtained from https://api.codecarbon.io/docs#/Experiments/add_experiment_experiment_post

--- a/.codecarbon.config
+++ b/.codecarbon.config
@@ -1,1 +1,8 @@
-/annex/objects/MD5E-s140--2a0310629883ad8bdf5c701a698d43e5
+[codecarbon]
+project_name = pypx-repack
+experiment_id = 990120cb-d6f9-4eae-8882-88bfe1f2d63b
+tracking_mode = machine
+measure_power_secs = 1
+save_to_file = true
+save_to_api = true
+
