--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *.md annex.largefiles=nothing
 *.csv annex.largefiles=nothing
 .codecarbon.config annex.largefiles=nothing
+justfile annex.largefiles=nothing
